# Ruview

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: demo_synthetic.py
firmware/csi_node/: csi_node.ino  platformio.ini
ruview/: __init__.py  cli.py  engine.py
ruview/csi/: __init__.py  models.py  processor.py
ruview/edge/: __init__.py  node.py  protocol.py
ruview/pose/: __init__.py  estimator.py
ruview/presence/: __init__.py  detector.py
ruview/signal/: __init__.py  features.py  filters.py
ruview/vitals/: __init__.py  breathing.py  heart_rate.py
tests/: conftest.py  test_csi_processor.py  test_pose.py  test_presence.py  test_vitals.py
